test/langtools/tools/javac/valhalla/lworld-values/UndeclaredIdentityObjectsTest.out
UndeclaredIdentityObjectsTest.java:23:13: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: java.lang.Object[], java.lang.InlineObject)
1 error
